// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Affiliation Form Dialog renders affiliation dialog without linking authors 1`] = `
<section
  className="makeStyles-root-1"
>
  <div
    data-cmp="TextField"
  />
  <div
    data-cmp="TextField"
  />
  <div
    data-cmp="TextField"
  />
  <div
    className="makeStyles-buttonPanel-3"
  >
    <div
      aria-hidden={true}
      className="makeStyles-spacer-4"
    />
    <div
      data-cmp="Button"
    />
    <div
      data-cmp="Button"
    />
  </div>
</section>
`;

exports[`Affiliation Form Dialog renders edit affiliation dialog form 1`] = `
<section
  className="makeStyles-root-1"
>
  <div
    data-cmp="TextField"
  />
  <div
    data-cmp="TextField"
  />
  <div
    data-cmp="TextField"
  />
  <div
    className="makeStyles-inputField-2"
  >
    <div
      className="makeStyles-affiliatedAuthorRow-5"
    >
      <div
        data-cmp="FormControl"
      >
        <div
          data-cmp="InputLabel"
        >
          Affiliated Author
        </div>
        <div
          data-cmp="Select"
        >
          <div
            data-cmp="MenuItem"
          >
            Select affiliated author
          </div>
        </div>
      </div>
      <div
        data-cmp="iconButton"
      />
    </div>
    <div
      data-cmp="Button"
    />
  </div>
  <div
    className="makeStyles-buttonPanel-3"
  >
    <div
      data-cmp="Button"
    />
    <div
      aria-hidden={true}
      className="makeStyles-spacer-4"
    />
    <div
      data-cmp="Button"
    />
    <div
      data-cmp="Button"
    />
  </div>
</section>
`;

exports[`Affiliation Form Dialog renders new affiliation dialog form 1`] = `
<section
  className="makeStyles-root-1"
>
  <div
    data-cmp="TextField"
  />
  <div
    data-cmp="TextField"
  />
  <div
    data-cmp="TextField"
  />
  <div
    className="makeStyles-inputField-2"
  >
    <div
      className="makeStyles-affiliatedAuthorRow-5"
    >
      <div
        data-cmp="FormControl"
      >
        <div
          data-cmp="InputLabel"
        >
          Affiliated Author
        </div>
        <div
          data-cmp="Select"
        >
          <div
            data-cmp="MenuItem"
          >
            Select affiliated author
          </div>
        </div>
      </div>
      <div
        data-cmp="iconButton"
      />
    </div>
    <div
      data-cmp="Button"
    />
  </div>
  <div
    className="makeStyles-buttonPanel-3"
  >
    <div
      aria-hidden={true}
      className="makeStyles-spacer-4"
    />
    <div
      data-cmp="Button"
    />
    <div
      data-cmp="Button"
    />
  </div>
</section>
`;
